# talks

./: .gitignore  CONTRIBUTING.md  Makefile  README.md
dagster-deep-dives/: .env.example  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
motherduck-dagster-hybrid-compute/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
motherduck-dagster-hybrid-compute/dbt_project/: dbt_project.yml  profiles.yml
motherduck-dagster-hybrid-compute/dbt_project/models/: sources.yml  top_ducks_by_region.sql  top_ducks_by_state.sql  top_ducks_by_year.sql
motherduck-dagster-hybrid-compute/dbt_project/reports/: package-lock.json
motherduck-dagster-hybrid-compute/dbt_project/reports/pages/: 01-duck-observations.md  about.md  index.md
motherduck-dagster-hybrid-compute/dbt_project/reports/sources/dagster_hybrid_demo/: top_ducks_by_region.sql  top_ducks_by_year.sql
motherduck-dagster-hybrid-compute/motherduck_dagster_hybrid/: __init__.py  assets.py  constants.py  resources.py
motherduck-dagster-hybrid-compute/reports/: package-lock.json  package.json
motherduck-dagster-hybrid-compute/reports/.evidence/customization/: .profile.json
motherduck-dagster-hybrid-compute/reports/pages/: 02-regional-metrics.md  03-rare-species.md
motherduck-dagster-hybrid-compute/reports/sources/dagster_hybrid_demo/: all_ducks.sql  connection.yaml  top_ducks_by_region.sql  top_ducks_by_state.sql  top_ducks_by_year.sql
project-blitz/: .env.example  .env.local  .env.staging  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
(+35 files in other folders)
